--- a/Docker/DockerFile
+++ b/Docker/DockerFile
@@ -1,10 +1,12 @@
 FROM python:3.12-slim
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
-
+RUN apt-get update && apt-get install -y \
+    gcc \
+    libpq-dev \
+    build-essential
 WORKDIR /app
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
-CMD ["gunicorn", "core.wsgi:applicaiton", "--bind", "0.0.0.0:8000"]
+COPY ../requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+COPY .. .
+EXPOSE 8000
+CMD [ "gunicorn" , "mainfolder.wsgi:application", "--bind", "0.0.0.0:8000" ]
