--- a/Docker/DockerFile
+++ b/Docker/DockerFile
@@ -1,12 +1,17 @@
 FROM python:3.12-slim
+
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
     libpq-dev \
-    build-essential
+    build-essential \
+    netcat-openbsd \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 COPY ../requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY .. .
 EXPOSE 8000
-CMD [ "gunicorn" , "mainfolder.wsgi:application", "--bind", "0.0.0.0:8000" ]
+CMD ["gunicorn", "mainfolder.wsgi:application", "--bind", "0.0.0.0:8000"]
